--- a/index.html
+++ b/index.html
@@ -56,10 +56,35 @@
                     Adicionar Letras Minúsculas
                 </label>
             </div>
+
+            <!-- checkbox numeros-->
+             <div class="item">
+                <input type="checkbox" name="includ_number" id="incluid_number">
+                <label for="includ_number">
+                    adicionar numero
+                </label>
+             </div>
+             <!--checkbox caractere especial-->
+              <div class="item">
+                <input type="checkbox" name="incluid_special_charavter" id="incluid_special_charavter">
+                <label for="incluid_special_charavter">
+                    adicionar caracter especial
+                </label>
+             </div>
+
+             <!--botão gerar senha-->
+             <button id="generate">
+                gerar senha
+             </button>
+             </div>
+
         </div>
+        <!--Script tags para Toastify ( biblioteca do JavaScript) e Script Personalizado-->
+ <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script&gt;
+        <script src="src/javascript/script.js"></script>
 
 
 
 
-</body>
+  </body>
 </html>
