--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="copy">
             <i class="fa-solid fa-copy"></i>
         </button>
-    </div>
+     </div>
 
         <!--Opções de Senhas-->
         <div id="password_items">
@@ -80,11 +80,10 @@
 
         </div>
         <!--Script tags para Toastify ( biblioteca do JavaScript) e Script Personalizado-->
- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script&gt;
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
         <script src="src/javascript/script.js"></script>
-
-
-
-
+       
+    </div>
+       
   </body>
 </html>
